--- a/templates/_base.html
+++ b/templates/_base.html
@@ -48,7 +48,7 @@
   
       <!-- Navbar Start -->
       <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-          <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+          <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
               <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>Muevete Cuba</h2>
           </a>
           <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -56,7 +56,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
               <div class="navbar-nav ms-auto p-4 p-lg-0">
-                  <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                  <a href="{% url 'home' %}" class="nav-item nav-link active">Inicio</a>
 
                   <div class="nav-item dropdown">
                       <a href="{% url 'about_us' %}" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Acerca de Nosotros</a>
@@ -70,9 +70,10 @@
                   <div class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Cursos</a>
                       <div class="dropdown-menu fade-down m-0">
-                          <a href="{% url 'courses_virtual' %}" class="dropdown-item">Cursos Virtuales</a>
-                          <a href="{% url 'courses_face' %}" class="dropdown-item">Cursos Presenciales</a>
-                          <a href="{% url 'courses_record' %}" class="dropdown-item">Clases Grabadas</a>
+                          <a href="{% url 'courses_virtual' %}" class="dropdown-item">Virtuales</a>
+                          <a href="{% url 'courses_group' %}" class="dropdown-item">Grupales</a>
+                          <a href="{% url 'courses_personal' %}" class="dropdown-item">Personalizado</a>
+                          <a href="{% url 'courses_choreography' %}" class="dropdown-item">Coreografias</a>
                       </div>
                   </div>
                   <a href="{% url 'contact' %}" class="nav-item nav-link">Contacto</a>
