--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -134,7 +134,8 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h4 class="section-title bg-white text-center text-primary px-3">Otros cursos de baile que te pueden gustar </h4>
+                    <h6 class="section-title bg-white text-center text-primary px-3">Otros cursos de baile que te pueden gustar</h6>
+                    <h1 class="mb-5">¡Encuentra Tu Curso Perfecto!</h1>
                 </div>
                 
                 <!-- list Courses Start -->
@@ -181,7 +182,7 @@
         <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="container">
                 <div class="text-center">
-                    <h4 class="section-title bg-white text-center text-primary px-3">Testimonios </h4>
+                    <h6 class="section-title bg-white text-center text-primary px-3">Testimonios </h6>
                     <h1 class="mb-3">Nuestros estudiantes dicen!</h1>
                 </div>
                 <div class="owl-carousel testimonial-carousel position-relative">
