--- a/templates/_base.html
+++ b/templates/_base.html
@@ -56,19 +56,17 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
               <div class="navbar-nav ms-auto p-4 p-lg-0">
-                  <a href="{% url 'home' %}" class="nav-item nav-link active">Inicio</a>
-
+                  <a href="{% url 'home' %}" class="nav-item nav-link {% if request.path == '/' %}active{% endif %}">Inicio</a>
                   <div class="nav-item dropdown">
-                      <a href="{% url 'about_us' %}" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Acerca de Nosotros</a>
+                      <a href="#" class="nav-link dropdown-toggle {% if 'instructor' in request.path %}active{% endif %}" data-bs-toggle="dropdown">Nuestro Profesor</a>
                       <div class="dropdown-menu fade-down m-0">
-                        <a href="{% url 'about_mision_vision_values' %}" class="dropdown-item">Misión y Visión</a>
-                        <a href="{% url 'instructor' %}" class="dropdown-item">Nuestros Profesores</a>
+                        {% for instructor in instructors %}
+                          <a href="{% url 'instructor_detail' instructor.slug %}" class="dropdown-item">{{ instructor.name }}</a>
+                        {% endfor %}
                       </div>
-                  </div>
-
-
+                  </div>                  
                   <div class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Cursos</a>
+                      <a href="#" class="nav-link dropdown-toggle {% if 'courses' in request.path %}active{% endif %}" data-bs-toggle="dropdown">Cursos</a>
                       <div class="dropdown-menu fade-down m-0">
                           <a href="{% url 'courses_virtual' %}" class="dropdown-item">Virtuales</a>
                           <a href="{% url 'courses_group' %}" class="dropdown-item">Grupales</a>
@@ -76,9 +74,9 @@
                           <a href="{% url 'courses_choreography' %}" class="dropdown-item">Coreografias</a>
                       </div>
                   </div>
-                  <a href="{% url 'contact' %}" class="nav-item nav-link">Contacto</a>
+                  <a href="{% url 'contact' %}" class="nav-item nav-link {% if 'contact' in request.path %}active{% endif %}">Contacto</a>
               </div>
-              <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Inscribete Ahora<i class="fa fa-arrow-right ms-3"></i></a>
+              <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block" data-bs-toggle="modal" data-bs-target="#exampleModal">Inscribete Ahora<i class="fa fa-arrow-right ms-3"></i></a>
           </div>
       </nav>
       <!-- Navbar End -->
@@ -197,8 +195,26 @@
 
       <!-- Template Javascript -->
       <script src="{% static 'js/main.js' %}"></script>
+      <script>
+        var exampleModal = document.getElementById('exampleModal')
+        exampleModal.addEventListener('show.bs.modal', function (event) {
+            // Button that triggered the modal
+            var button = event.relatedTarget
+            // Extract info from data-bs-* attributes
+            var recipient = button.getAttribute('data-bs-course')
+            var messageField = document.getElementById('message');
+            if (recipient) {
+                messageField.value = "Quiero informes y promociones sobre el Curso " + recipient;
+            } else {
+                messageField.value = "Quiero informes y promociones sobre los cursos.";
+            }
+
+
+        })
+    </script>
 
       {% block javascript %}
+      
       {% endblock javascript %}
 
   </body>
